# gitops-scaffold

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md  compose-support.md  configuration.md  generation.md  roadmap.md
docs/handoffs/: 2026-07-16-v0.3.0-handoff.md  README.md
examples/: README.md
examples/basic/: docker-compose.yml
scripts/: bootstrap.sh  check.sh
src/gitops_scaffold/: __init__.py  cli.py  generation_io.py
src/gitops_scaffold/analyzer/: __init__.py  base.py  default.py  scoring.py
src/gitops_scaffold/analyzer/rules/: __init__.py  base.py  configmap.py  health.py  image.py  persistence.py  ports.py  runtime_user.py  secrets.py  security.py  volumes.py
src/gitops_scaffold/config/: __init__.py  settings.py
src/gitops_scaffold/generators/: __init__.py  base.py  healthcheck.py  ingress_config.py  labels.py  layout.py  pipeline.py  ports.py  rendering.py  secret_classification.py  volumes.py
src/gitops_scaffold/generators/kustomize/: __init__.py  checklist.py  configmap.py  deployment.py  ingress.py  kustomization.py  pvc.py  readme.py  secret.py  service.py
src/gitops_scaffold/models/: __init__.py  analysis.py  app.py  generation.py  generation_report.py  report.py
src/gitops_scaffold/parsers/: __init__.py  base.py  compose.py  dockerfile.py  github.py  helm.py  kubernetes.py  registry.py
src/gitops_scaffold/reporting/: __init__.py  report.py
src/gitops_scaffold/templates/: README.md.j2  VALIDATION_CHECKLIST.md.j2  configmap.yaml.j2  deployment.yaml.j2  ingress.yaml.j2  kustomization.yaml.j2  pvc.yaml.j2  secret.example.yaml.j2  service.yaml.j2
src/gitops_scaffold/utils/: __init__.py  duration.py  fs.py  kubectl.py  logging.py  naming.py
src/gitops_scaffold/validators/: __init__.py  base.py  manifests.py  structure.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_cli_analyze.py  test_cli_generate.py  test_configmap_generator.py  test_default_analyzer.py  test_deployment_generator.py  test_duration.py  test_generation_models.py  test_generation_pipeline.py  test_generator_utils.py  test_generators.py  test_golden_analysis.py  test_golden_generation.py  test_ingress_generator.py  test_kubectl_integration.py  test_kustomization_generator.py  test_manifest_consistency_validator.py  test_models.py  test_parsers.py  test_pvc_generator.py  test_readme_generator.py  test_reporting.py  test_rules.py  test_scoring.py  test_secret_example_generator.py  test_service_generator.py  test_validators.py
tests/fixtures/compose/: advanced-fields-compose.yml  audiobookshelf-compose.yml  bind-mounts-compose.yml  environment-list-syntax-compose.yml  exit-code-0-warnings-only-compose.yml  exit-code-2-critical-compose.yml  healthcheck-compose.yml  multi-service-compose.yml  named-volumes-compose.yml  ports-long-syntax-compose.yml  ports-short-syntax-compose.yml  secrets-compose.yml
tests/fixtures/compose/malformed/: missing-services-key-compose.yml  service-not-a-mapping-compose.yml  yaml-syntax-error-compose.yml
tests/fixtures/golden/: audiobookshelf.json  multi_service.json  secrets.json
